# Simple-Mock-Webserver

./: .coveragerc  .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml
tests/: conftest.py  test_api.py  test_configuration.py  test_db.py  test_service.py
tests/templates/: config.yml.j2
too_simple_server/: __main__.py  configuration.py  database.py  run.py
web_server/: __main__.py  api.py  configuration.py  database.py  run.py
